[metadata]
name = infinisdk
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
description = Infinidat API SDK
license = BSD
author = Infinidat
author_email = info@infinidat.com
url = http://devdocs.infinidat.com/sphinx/infinisdk/
version = 133.0.0

[entry_points]
console_scripts =
    infinisdk-cli = infinisdk.entry_point:main_entry_point

[extras]
doc =
    alabaster
    sphinx
testing = pytest>=3.7.0
    astroid~=1.5.3; python_version == "2.7"
    astroid>=2.0; python_version >= "3.4"
    pylint~=1.7.2; python_version == "2.7"
    pylint>=2.0; python_version >= "3.4"
    pyforge
    waiting
    infinisim~=133.0.0

[tool:pytest]
testpaths = infinisdk tests
