[metadata]
name = infinisdk
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
description = Infinidat API SDK
license = BSD
author = Infinidat
author_email = info@infinidat.com
url = https://infinisdk.readthedocs.io/en/latest/
version = 161.1.3

[entry_points]
console_scripts =
    infinisdk-cli = infinisdk.entry_point:main_entry_point

[extras]
doc =
    alabaster
    sphinx
testing = pytest>=4.6.0
    astroid>=2.0
    pylint>=2.0
    pyforge
    waiting
    infinisim~=161.1.0
    zipp~=0.6.0; python_version == "3.5"

[tool:pytest]
testpaths = infinisdk tests
addopts = -ra -W error::UserWarning -W error::Warning
markers =
    required_version: mark a test to run from 'relevant_up_to' or 'relevant_from' system version
    only_latest: mark a test which should run only on latest code
